增加富文本编辑器TinyMCE和代码高亮SyntaxHighlighter插件

--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,5 +1,26 @@
 {% extends 'mysite/base.html' %}
-
+{% load staticfiles %}
+{% block header %}
+    <link rel="stylesheet" href="{% static 'tinymce/plugins/upload/plugin.css' %}">
+    <script type="text/javascript" src="{% static 'tinymce/tinymce.min.js' %}"></script>
+    <script type="text/javascript">
+        tinymce.init({
+            selector: "textarea",
+            //width: 800,
+            height: 300,
+            forced_root_block: false,
+            plugins: [
+                "advlist autolink lists link image charmap print preview anchor sh4tinymce upload",
+                "searchreplace visualblocks code fullscreen",
+                "insertdatetime media table contextmenu paste"
+            ],
+            upload_action: 'upload.php',   //required
+            upload_file_name: 'userfile',  //required
+            toolbar: "insertfile undo redo | styleselect | bold italic | alignleft aligncenter" +
+            " alignright alignjustify | bullist numlist outdent indent | preview link image upload sh4tinymce"
+        });
+    </script>
+{% endblock %}
 {% block content %}
     <div class="post">
         <h2>{% if is_new %}新建文章{% else %}编辑文章{% endif %}</h2>
