--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -32,7 +32,13 @@
             {% endif %}
             <div class="fixed"></div>
         </div>
-        <div class="content"><p>{{ post.text|linebreaks }}</p></div>
+        <div class="content">
+            <p>
+                {% autoescape off %}
+                {{ post.text }}
+                {% endautoescape %}
+            </p>
+        </div>
         <div class="under">
             <span class="categories">分类: </span>
             <span>
@@ -105,7 +111,7 @@
                 </div>
             </div>
             <!-- comment input -->
-            <div class="row" style="margin-left:-7">
+            <div class="row" style="margin-left:-7px;">
                 <label for="comment"></label>
                 <textarea name="text" id="comment" tabindex="4" rows="8" cols="50"></textarea>
             </div>
