--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,9 +1,11 @@
 {% extends 'mysite/base.html' %}
 {% load blog_tags %}
+{% load pagination_tags %}
 {% block content %}
     {% if list_header %}
         <div class="box">{{ list_header }}</div>
     {% endif %}
+    {% autopaginate posts 10 %}
     {% for post in posts %}
         <div class="post">
             <h2><a href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
@@ -45,4 +47,5 @@
             </div>
         </div>
     {% endfor %}
+    {% paginate %}
 {% endblock %}
