--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -12,7 +12,7 @@
             plugins: [
                 "advlist autolink lists link image charmap print preview anchor sh4tinymce upload",
                 "searchreplace visualblocks code fullscreen",
-                "insertdatetime media table contextmenu paste"
+                "insertdatetime table contextmenu paste addmore"
             ],
             upload_action: 'upload.php',   //required
             upload_file_name: 'userfile',  //required
