--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -37,6 +37,7 @@
                        onclick="return confirm('确定发布文章吗？');">发布</a>
                 {% endif %}
             {% endif %}
+            {% if post.published_date %}
             <span class="comments">
                 {% if comments %}
                     {{ comments|length }} 条评论
@@ -45,6 +46,7 @@
                 {% endif %}
             </span>
             <span class="comments"> {{ post.click }} 人阅读&nbsp;&nbsp;</span>
+            {% endif %}
             {% if user.is_authenticated %}
                 <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">
                     <span class="glyphicon glyphicon-pencil"></span>
