--- a/mysite/templates/mysite/base.html
+++ b/mysite/templates/mysite/base.html
@@ -187,10 +187,18 @@
                 <div id="meta-2" class="widget widget_meta">
                     <h3>功能</h3>
                     <ul>
-                        <li><a href="/admin">管理站点</a></li>
+                        {% if user.is_superuser %}
+                        <li><a href="/xadmin">管理站点</a></li>
+                        {% endif %}
+                        {% if user.is_authenticated %}
                         <li>
                             <a href="{% url 'django.contrib.auth.views.logout' %}">登出</a>
                         </li>
+                        {% else %}
+                        <li>
+                            <a href="{% url 'django.contrib.auth.views.login' %}">登录</a>
+                        </li>
+                        {% endif %}
                         <li><a href="#">文章<abbr title="RSS">RSS</abbr></a></li>
                     </ul>
                 </div>
