--- a/mysite/templates/registration/login.html
+++ b/mysite/templates/registration/login.html
@@ -81,8 +81,9 @@
                 <input type="hidden" name="next" value="{{ next }}"/>
                 <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
                 <div class="text-info" style="margin-top:15px;">
-                    <a href="/xadmin/xadmin/password_reset/"><i class="fa fa-question-sign"></i>
-                    忘记了您的密码或用户名？</a></div>
+                    <a href="/xadmin/xadmin/password_reset/">
+                        <i class="fa fa-question-sign"></i>忘记了您的密码或用户名？</a>
+                </div>
             </div>
         </div>
     </form>
@@ -109,6 +110,5 @@
 <script type="text/javascript"
         src="{% static 'xadmin/vendor/jquery-ui/jquery.ui.effect.js' %}"></script>
 <script type="text/javascript" src="{% static 'xadmin/js/xadmin.plugin.themes.js' %}"></script>
-
 </body>
 </html>
