集成全文搜索，1.0版本即将发布。^_^

--- a/mysite/templates/mysite/base.html
+++ b/mysite/templates/mysite/base.html
@@ -54,10 +54,10 @@
     <!-- menus END -->
     <!-- searchbox START -->
     <div id="searchbox">
-        <form action="{% url 'blog.views.post_list' %}" method="get">
+        <form action="{% url 'blog.views.full_search' %}" method="get">
             <div class="content">
                 <label>
-                    <input type="text" class="textfield searchtip" name="s" size="24" value="">
+                    <input type="text" class="textfield searchtip" name="q" size="24" value="">
                 </label>
                 <input type="submit" class="button" value="">
             </div>
