基于django1.8重新改写

--- a/mysite/templates/mysite/base.html
+++ b/mysite/templates/mysite/base.html
@@ -54,7 +54,7 @@
     <!-- menus END -->
     <!-- searchbox START -->
     <div id="searchbox">
-        <form action="{% url 'blog.views.full_search' %}" method="get">
+        <form action="" method="get">
             <div class="content">
                 <label>
                     <input type="text" class="textfield searchtip" name="q" size="24" value="">
