back to github.io

--- a/mysite/templates/mysite/base.html
+++ b/mysite/templates/mysite/base.html
@@ -208,8 +208,8 @@
         <div id="footer">
             <a id="gotop" href="#" onclick="MGJS.goTop();return false;">回到顶部</a>
 
-            <div id="copyright">版权所有 © 2014 <a href="http://www.pycoding.com/">野猪林</a></div>
-            <div id="themeinfo">页面设计由 <a href="http://www.pycoding.com/">熊能</a> 提供, 通过
+            <div id="copyright">版权所有 © 2014 <a href="http://yidao620c.github.io/">野猪林</a></div>
+            <div id="themeinfo">页面设计由 <a href="http://yidao620c.github.io/">熊能</a> 提供, 通过
                 <a href="http://validator.w3.org/check?uri=referer">XHTML 1.1</a>
                 和 <a href="http://jigsaw.w3.org/css-validator/check/referer?profile=css3">CSS 3</a>
                 验证.
